plugins {
    id 'org.springframework.boot' version '2.5.6'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id 'java'
    id "org.flywaydb.flyway" version "7.1.1"
}

group = 'org.avni_integration_service'
version = '0.0.2-SNAPSHOT'
sourceCompatibility = "17"

bootJar {
    enabled = false
}

jar {
    enabled = true
}

task migrateTestDb(type: org.flywaydb.gradle.task.FlywayMigrateTask) {
    url = 'jdbc:postgresql://localhost:5432/avni_int_test'
    user = 'avni_int'
    password = 'password'
}

task migrateDb(type: org.flywaydb.gradle.task.FlywayMigrateTask) {
    url = 'jdbc:postgresql://localhost:5432/avni_int'
    user = 'avni_int'
    password = 'password'
}

tasks.withType(JavaCompile).all {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).all {
    jvmArgs += '--enable-preview'
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':util')
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    runtimeOnly 'org.postgresql:postgresql'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation "org.assertj:assertj-core:3.11.1"

//    implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'

    implementation "log4j:log4j:1.2.17"
    implementation "joda-time:joda-time:2.10.10"
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.12.6'

}

test {
    useJUnitPlatform()
}
targetCompatibility = JavaVersion.VERSION_17
